# Rasterizer

./: BVH.cpp  BVH.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Fragment.h  Model.cpp  Model.h  OBJ_Loader.h  Ray.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  main.cpp  rasterizer.cpp  rasterizer.h
